1-istio-demo-test/1-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-test
  labels:
    monitoring: prometheus
    istio-injection: enabled
