1-istio-demo-test/2-nginx-deploy.yaml
---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
  namespace: istio-test
  labels:
    app: myapp
    version: v1
spec:
  selector:
    matchLabels:
      app: myapp
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
      - name: myapp
        image: container-registry.tencentcloudcr.com/tools/mytestapp
        ports:
        - containerPort: 80
---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
  namespace: istio-test
  labels:
    app: myapp
    version: v2
spec:
  selector:
    matchLabels:
      app: myapp
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
      - image: container-registry.tencentcloudcr.com/tools/mytestapp
        name: myapp
        ports:
        - containerPort: 80
